refactor: 使用Collections.emptyList()替代List.of()返回空列表
使用Collections.emptyList()更清晰地表达返回不可变空列表的意图，同时保持原有功能不变